test/functions/bradc/useBeforeDef/useBeforeDef.good
Error: Variable 'y' used before defined (useBeforeDef.chpl:1)
